# docker-tools

./: .auto-changelog  .release-it.json  LICENSE  README.md  cookiecutter.json  devServer.sh
.github/workflows/: release.yml
dephell/: Dockerfile  pyproject.toml
tools/common/: entrypoint.sh
tools/dephell/: Dockerfile  README.md  image_init.sh  pyproject.toml
tools/jupyter/: Dockerfile  Untitled.ipynb  image_init.sh
tools/jupyter/conf/: jupyter_notebook_config.py
tools/pytest/: Dockerfile  image_init.sh
tools/python-database-tools/: Dockerfile  image_init.sh  pyproject.toml
tools/python3-8/: Dockerfile  README.md
tools/vscode/: Dockerfile
{{cookiecutter.project_slug}}/: Dockerfile
{{cookiecutter.slug}}/: Dockerfile.template
