[tool.poetry]
name = "dephell"
version = "0.1.0"
description = "https://dephell.readthedocs.io/index.html"
authors = ["Morgan Curley <morgan.curley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dephell = "^0.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
atomic = true
indent = "    "
length_sort = true
