[tool.poetry]
name = "python-database-tools"
version = "0.1.0"
description = "Skeleton Python project to interact with a database"
authors = ["Morgan Curley <morgan.curley@gmail.com>"]
license = "MIT"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.16.52"
SQLAlchemy = "^1.3.22"
psycopg2-binary = "^2.8.6"
snowflake-sqlalchemy = "^1.2.4"
sqlparse = "^0.4.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
bandit = "==1.6.2"
black = "==20.8b1"
coverage = "==5.3"
flake8 = "==3.8.4"
isort = "==5.6.4"
junit-xml = "==1.9"
mock = "==4.0.2"
moto = {version = "==1.3.16", extras = ["s3", "secretsmanager"]}
mypy-extensions = "==0.4.3"
pytest = "==6.1.2"
pytest-cov = "==2.10.1"
pylama = "^7.7.1"
icecream = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
